PagedList widget done, enevnts page done, fixed out of bounds exception

--- a/src/widgets/main/PagedList/index.module.css
+++ b/src/widgets/main/PagedList/index.module.css
@@ -18,7 +18,7 @@
   border-radius: 10px;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: left;
   gap: 50px;
   padding: 10px 20px;
 }
